[package]
name = "loglevel"
version = "0.1.0"
description = "Simple way to set your log level "
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
keywords = ["generics", "core", "wrap", "patterns"]
categories = ["data-structures", "rust-patterns"]
repository = "https://github.com/rust-amplify/loglevel"
homepage = "https://github.com/rust-amplify"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
amplify = "4.8.0"
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_trace"] }
env_logger = "0.11.8"

[features]
default = []
