[package]
name = "loglevel"
version = "0.2.0"
description = "Simple way to set your log level "
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
keywords = ["logging", "log", "cli"]
categories = ["command-line-interface"]
repository = "https://github.com/rust-amplify/loglevel"
homepage = "https://github.com/rust-amplify"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.11.8"
clap = { version = "4.5", features = ["derive"] }

[features]
default = []
